--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
