--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.17.0",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "swagger-ui-express": "^5.0.1",
     "util": "^0.12.5",
+    "validate.js": "^0.13.1",
     "winston": "^3.17.0",
     "yamljs": "^0.3.0"
   },
