--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "confidence": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "expo-server-sdk": "^3.15.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
@@ -32,6 +33,7 @@
     "sequelize": "^6.37.7",
     "swagger-ui-express": "^5.0.1",
     "util": "^0.12.5",
+    "uuid": "^11.1.0",
     "validate.js": "^0.13.1",
     "winston": "^3.17.0",
     "yamljs": "^0.3.0"
