--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^2.2.0",
     "confidence": "^5.0.1",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
     "expo-server-sdk": "^3.15.0",
     "express": "^5.1.0",
