--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^2.2.0",
     "confidence": "^5.0.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
     "expo-server-sdk": "^3.15.0",
@@ -29,6 +30,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.17.0",
     "morgan": "^1.10.0",
+    "node-cron": "^4.1.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
