--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "uuid": "^11.1.0",
     "validate.js": "^0.13.1",
     "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
